# disarm
bin_PROGRAMS = disarm

disarm_SOURCES = \
	src/disarm.cpp \
	src/arm.cpp src/arm.hh \
	src/basicblock.cpp src/basicblock.hh \
	src/codesep.cpp src/codesep.hh \
	src/codesim.cpp src/codesim.hh \
	src/endian.hh \
	src/hashtable.cpp src/hashtable.hh \
	src/image.cpp src/image.hh \
	src/inter.cpp src/inter.hh \
	src/list.cpp src/list.hh \
	src/slist.cpp src/slist.hh \
	src/symbol.cpp src/symbol.hh
