# disarm
bin_PROGRAMS = disarm

disarm_SOURCES = \
	src/disarm.cpp \
	src/arm.cpp src/arm.hh \
	src/basicblock.cpp src/basicblock.hh \
	src/codesep.cpp src/codesep.hh \
	src/codesim.cpp src/codesim.hh \
	src/endian.hh \
	src/image.cpp src/image.hh \
	src/inter.cpp src/inter.hh \
	src/symbol.cpp src/symbol.hh
